fix mobile flex gap?

--- a/style.css
+++ b/style.css
@@ -579,6 +579,8 @@ p {
   background: white;
   -webkit-box-shadow: 0px 5px 50px rgb(233, 233, 233);
   box-shadow: 0px 5px 50px rgb(233, 233, 233);
+  -webkit-flex-gap: 85px;
+  -ms-flex-gap: 85px;
   gap: 85px;
 }
 
